[package]
name = "sour"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/naakaamura/sour"
description = "A customizable command line brainfuck interpreter."

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
